Disable mouseover to fix flickering, hide node on map click, refactor

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -124,7 +124,7 @@
 
 .tooltip:before,
 .tooltip:after {
-  bottom: 98%;
+  bottom: 96%;
   left: 50%;
   border: solid transparent;
   content : " ";
